--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -49,11 +49,11 @@
 				<!-- <p class="am-navigation-text category-text">{{data.filters.currentCategory}}</p> -->
 				<span class="am-navigation-text category-text">{{data.filters.currentCategory}}</span>
 				<!-- <span class="am-navigation-text"> > </span> -->
-				<!-- <p class="am-navigation-text order-text">{{data.filters.currentOrder}}</p> -->
+				<span class="am-navigation-text order-text">{{data.filters.currentOrder}}</span>
 				<!-- <p class="am-navigation-text search-text hide">incas</p> -->
-				<span class="am-navigation-text search-text hide">incas</span>
+				<span class="am-navigation-text search-text hide"></span>
 				<!-- <p class="am-navigation-text featured-text hide">AM</p> -->
-				<span class="am-navigation-text featured-text hide">AM</span>
+				<span class="am-navigation-text featured-text hide"></span>
 			</div>
 			<div class="filter right" data-state="closed">
 				<div class="am-Select">
@@ -73,7 +73,7 @@
 		<div class="grid work-layout-discover">
 			<div class="grid-sizer"></div>
 		</div>
-		<div class="am-search-result empty-message hide">
+		<div class="am-search-result bare-message hide">
 			No se encontraron resultados
 			<br><br>
 			<a href="/works/category/all/page-1" class="am-report-link blue" href="">Volver a todas las obras</a>
