--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -104,7 +104,7 @@
 		</div>
 		<div class="grid-100 grid-parent u-margin-top-60">
 			{% if owner %}
-			<div class="empty-box bare-message">
+			<div class="empty-box bare-message hide">
 				<div class="empty-box-column left">
 					<div class="plus-container">
 						<i class="bi_interface-circle-plus"></i>
