--- a/app/views/user/account/index.html
+++ b/app/views/user/account/index.html
@@ -143,23 +143,12 @@
 {% endblock %}
 
 {% block scripts %}
-<script src='/jquery.tagsinput.js' type='text/javascript'></script>
-<script src='/jquery.ui.widget.js' type='text/javascript'></script>
-<script src='/jquery.iframe-transport.js' type='text/javascript'></script>
-<script src='/jquery.fileupload.js' type='text/javascript'></script>
-<script src='/jquery.cloudinary.js' type='text/javascript'></script>
 <script src="/jquery.maskedinput.js" lang="text/javascript"></script>
 	<script>
 		$(document).ready(function () {
-			var config = {
-		    "api_key": "337494525976864",
-		    "cloud_name": "hackdudes",
-		    "private_cdn": false
-		  };
-
 			var context = {{context|json|safe}};
 
-		  $.cloudinary.config(config);
+			$.cloudinary.config({{cloudinary.config()|json|safe}});
 			var uploaderImage = new APP.UploaderImage($('.uploader-profile'), function(idImage){
         this.$view.find('.upload').show();
         $('.cloudinary-fileupload').show();
