--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -157,7 +157,7 @@
 	  <div class="grid-container">
 	    <div class="grid-100">
 	    	<div class="more-carousel">
-					<p class="empty-profile-text empty-message hide u-margin-top-30">El artista no tiene mas obras<br><br>
+					<p class="empty-profile-text empty-message bare-message hide u-margin-top-30">El artista no tiene mas obras<br><br>
 						<a href="/works/category/all/page-1/">Descubre todas las obras de AM</a>
 					</p>
 	        <div class="more-images more">
@@ -177,7 +177,7 @@
 	  <div class="grid-container">
 	    <div class="grid-100">
 	      <div class="more-carousel">
-					<p class="empty-profile-text empty-message hide u-margin-top-30">No existen obras relacionadas<br><br>
+					<p class="empty-profile-text empty-message bare-message hide u-margin-top-30">No existen obras relacionadas<br><br>
 						<a href="/works/category/all/page-1/">Descubre todas las obras de AM</a>
 					</p>
 	        <div class="more-images similar">
@@ -209,7 +209,7 @@
 	          </form>
 	      	</div>
         {% else %}
-        	<p class="empty-profile-text  empty-message u-margin-top-30" style="display: block;">
+        	<p class="empty-profile-text  empty-message bare-message u-margin-top-30" style="display: block;">
         		<a href="/auth/login">Logeate, para agregar review</a>
         	</p>
         {% endif %}
@@ -234,7 +234,7 @@
 	          {% endfor %}
 	        </div>
 				{% else %}
-					<p class="empty-profile-text  empty-message hide u-margin-top-30" style="display: block;">Esta obra aun no tiene tags<br><br>
+					<p class="empty-profile-text  empty-message bare-message hide u-margin-top-30" style="display: block;">Esta obra aun no tiene tags<br><br>
 						<a href="/works/category/all/page-1/">Descubre todas las obras de AM</a>
 					</p>
 				{% endif %}
@@ -353,11 +353,6 @@
 {% endblock %}
 
 {% block scripts %}
-	<script src='/jquery.tagsinput.js' type='text/javascript'></script>
-	<script src='/jquery.ui.widget.js' type='text/javascript'></script>
-	<script src='/jquery.iframe-transport.js' type='text/javascript'></script>
-	<script src='/jquery.fileupload.js' type='text/javascript'></script>
-	<script src='/jquery.cloudinary.js' type='text/javascript'></script>
 	<script>
 		var owner = {{owner|json|safe}};
 		var products = {{products|json|safe}};
@@ -367,85 +362,9 @@
 		var reviews = {{reviews|json|safe}};
 		var more = {{more|json|safe}};
 		var similar = {{similar|json|safe}};
-
-		$('select[name=edit-work-category]')
-		.find('option[value=' + element.Category.id + ']')
-		.attr('selected', true);
-
-		$('input[name=edit-work-tags]').tagsInput({
-			height:'50px', width:'100%', defaultText:'+ Etiqueta'
-		});
-
-		var config = {
-			"api_key": "337494525976864",
-			"cloud_name": "hackdudes",
-			"private_cdn": false
-		};
-		$.cloudinary.config(config);
-		var uploaderImage = new APP.UploaderImage($('.uploader-work'), function(idImage){
-				this.$view.find('.upload').show();
-				$('.cloudinary-fileupload').show();
-				var filters =  {width: 300, crop:'limit'};
-				$.cloudinary.image(idImage, filters).appendTo(this.$view.find('.preview'));
-		});
-
-		$("#go-collection-modal").leanModal();
-		$("#go-share-modal").leanModal();
-		$("#go-edit-modal").leanModal();
-
-		uploaderImage.photo = element.photo;
-		$('.edit-work-form').submit(function(event) {
-			event.preventDefault();
-			$('.save').hide();
-			$('.save-loading').show();
-			$.ajax({
-				method: 'POST',
-			 	url: DataApp.currentUser.url + '/work/update',
-				data: {
-					idWork: element.id,
-					photo: uploaderImage.photo,
-					name: $('input[name=edit-work-name]').val(),
-					idCategory: parseInt($('select[name=edit-work-category]').val(), 10),
-					tags: $('input[name=edit-work-tags]').val(),
-					description: $('textarea[name=edit-work-description]').val(),
-					public: $('input[name=edit-work-public]:checked').val() !== undefined
-				}
-		 	}).then(function(response) {
-				if (response.status === 200) {
-					var newWork = response.data.work;
-					var photo = $('<img>', {
-						class: 'work-photo',
-						src: Utils.addImageFilter(newWork.photo, 'w_700,h_800,q_80,c_limit')
-					});
-
-					$('.single-image-inner').find('.work-photo').remove()
-					$('.single-image-inner').prepend(photo);
-					$('.work-name').text(newWork.name);
-
-					var category = $('<a>', {href: '/works/category/' + newWork.Category.nameSlugify + '/page-1/'});
-					var categoryName = $('<span>',{class: 'am-Category-box u-margin-top-7'}).text(newWork.Category.name);
-					category.append(categoryName);
-
-					$('.work-tags').empty();
-					var i, tag, tagItem , urlTag;
-					for (i = 0; i < newWork.Tags.length; i++) {
-						tag = $('<div>', {class: 'tag uppercase'});
-						urlTag = '/works/category/all/page-1/?term=' + encodeURIComponent('#' + newWork.Tags[i].name);
-						tagItem = $('<a>', {href: urlTag}).text(newWork.Tags[i].name);
-						tag.append(tagItem);
-						$('.work-tags').append(tag);
-					}
-					$('.tags-number').text(newWork.Tags.length);
-					$('.work-description').text(newWork.description);
-					$('.work-category').empty().append(category);
-					var url = '/user/' + element.User.username + '/work/' + newWork.nameSlugify;
-					Utils.changeUrl(DataApp.baseTitle + newWork.name, url);
-
-					$('.save').show();
-					$('.save-loading').hide();
-					$('#lean_overlay').trigger( "click" );
-				}
-			});
+		$(function() {
+			$("#go-collection-modal").leanModal();
+			$("#go-share-modal").leanModal();
 		});
 	</script>
 	<script src='/work-product.js'></script>
