antes de pulear

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -76,11 +76,16 @@ white = #fff
 		left 50%
 		transform translateX(-50%)
 		&-item
-			font-size .6rem
+			// font-size .6rem
+			font-size .65rem
 			color #ddd
 			// color white
-			margin .25rem
-			padding .25rem
+			// margin .25rem
+			// padding .25rem
+
+			margin .15rem
+			padding .15rem
+
 			cursor pointer
 			&.active
 				color #bbb
