--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -25,8 +25,8 @@
 					<i class="slider-nav-item js-slideNavItem active fa fa-circle"></i>
 					<i class="slider-nav-item js-slideNavItem fa fa-circle"></i>
 					<i class="slider-nav-item js-slideNavItem fa fa-circle"></i>
-					<i class="slider-nav-item js-slideNavItem fa fa-circle"></i>
-					<i class="slider-nav-item js-slideNavItem fa fa-circle"></i>
+					<!-- <i class="slider-nav-item js-slideNavItem fa fa-circle"></i>
+					<i class="slider-nav-item js-slideNavItem fa fa-circle"></i> -->
 				</div>
 			</section>
 		</div>
