add private tag

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -712,6 +712,20 @@ body
 	color white
 	cursor pointer
 
+.private
+	background-color #ff6666
+	border-radius 3px
+	font-family 'Montserrat', sans-serif
+	font-weight bold
+	font-size 8px
+	color white
+	padding 4px 8px
+	letter-spacing 1px
+	position absolute
+	bottom -5px
+	right 5px
+	cursor pointer
+
 .edit-collection
 	font-size 1.15em
 	position absolute
