--- a/app/views/errors/401.html
+++ b/app/views/errors/401.html
@@ -2,15 +2,8 @@
 
 {% block elements %}
 
-	<div class="error-404" style="background-image: url('/img/404.png')">
-	<!-- <div class="error-404" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/c_limit,w_1600/general/am-cover.jpg')"> -->
-		<div class="inner">
-			<p class="title">Error 401</p>
-			<p class="title">Lo setimos pagina no encontrada</p>
+	<div class="private">
 
-			<p class="desc">Pero existen cientos de obras aún por descubrir</p>
-			<a href="/works/category/all/page-1/">DESCRUBRIR OBRAS</a>
-		</div>
 	</div>
 
 
