--- a/app/views/partials/elements/work.html
+++ b/app/views/partials/elements/work.html
@@ -29,6 +29,8 @@
         <div class="edit"><i class="bi_editorial-compose"></i></div>
       <% } %>
 
+      <div class="private">PRIVADO</div>
+
       <a href="/user/<%=User.username%>/work/<%=nameSlugify%>">
         <img src="<%= addFilter(photo, 'w_300,d_am_avatar.jpg') %>">
       </a>
