new empty box design

--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -99,6 +99,28 @@
 			<div class="u-separator"></div>
 		</div>
 		<div class="grid-100 grid-parent u-margin-top-60">
+
+
+			<div class="empty-box">
+				<div class="empty-box-column left">
+					<div class="plus-container">
+						<i class="bi_interface-circle-plus"></i>
+					</div>
+				</div>
+				<div class="empty-box-column right">
+
+					<i class="bi_interface-circle-plus"></i>
+
+					<p class="title u-margin-top-20">No tienes ninguna obra o creación <br> subida todavía :(</p>
+					<p class="subtitle u-margin-top-20">Pero anímate cualquiera puede crear! <br> Sube un dibujo o una foto y comienza tu aventura!</p>
+
+					<a href="#" class="subtitle u-margin-top-20">Saber mas sobre subir obras</a>
+
+					<!-- <a href="#" class="u-margin-top-20"><i class="bi_media-image-d"></i>&nbsp;&nbsp;BUSCAR ARCHIVO</a> -->
+					<a href="#" class="u-margin-top-30 button"><i class="bi_interface-circle-plus"></i>&nbsp;&nbsp;SUBIR PRIMERA OBRA</a>
+				</div>
+			</div>
+
 			{% if owner %}
 			<div class="empty-box bare-message hide">
 				<div class="empty-box-column left">
