--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -751,6 +751,7 @@ body
 			justify-content center
 		.option
 			margin 10px
+			margin-bottom 0
 			cursor pointer
 			i
 				font-size 1.5em
@@ -2968,7 +2969,7 @@ body
 .empty-box
 	border-radius 4px
 	border solid 1px #9b9b9b
-	max-width 700px
+	max-width 750px
 	margin auto
 	text-align center
 	display flex
@@ -3001,21 +3002,36 @@ body
 	.subtitle
 		font-family: 'Montserrat',sans-serif;
 		color #000
-		font-size 18px
+		// font-size 18px
+		font-size 16px
 		line-height 1.25
 
 	a
-		font-family 'Montserrat', sans-serif !important
-		font-weight bold
-		font-size 10px
-		color #3a3d3f
-		// padding 15px 20px
-		padding 10px 20px
-		border-radius 4px
-		letter-spacing 2px
 		display inline-block
+		text-decoration underline
+
+	.button
+		text-decoration none
+		font-family 'Montserrat', sans-serif !important
+		// font-weight bold
+		font-size 10px
+		// color #3a3d3f
+		color white
+		// padding 15px 20px
+		background #277cea
+		border-radius 4px
 		border solid 1px black
+
+		// padding 10px 20px
+		padding 8px 15px
+		letter-spacing 2px
+		// display inline-block
 		box-shadow 1px 2px 1px 0px rgba(black, 0.5)
+
+		display: inline-flex;
+		align-items: center;
 		i
-			font-size 1.5em
-			color #000
+			// font-size 1.5em
+			font-size 2.5em
+			// color #000
+			color white
