--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -110,6 +110,7 @@
 				<div class="empty-box-column right">
 
 					<i class="bi_interface-circle-plus"></i>
+					<!-- <i class="bi_interface-plus"></i> -->
 
 					<p class="title u-margin-top-20">No tienes ninguna obra o creación <br> subida todavía :(</p>
 					<p class="subtitle u-margin-top-20">Pero anímate cualquiera puede crear! <br> Sube un dibujo o una foto y comienza tu aventura!</p>
@@ -185,6 +186,7 @@
 	<div class="discover-content followings-wrapper  grid-container u-padding-top-10 u-padding-bottom-70
 		{% if currentPath !== 'followings' %} hide {% endif %}">
 		<div class="grid-100 grid-parent">
+
 			{% if owner %}
 			<p class="empty-profile-text bare-message empty-message hide u-margin-top-30">Aún no sigues a ningun artista <br><br>
 				<a href="/users/specialty/all/page-1?order=popularity">Descubre y empieza a seguir tu primer artista</a>
@@ -198,9 +200,31 @@
 			<div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div>
 		</div>
 	</div>
+
 	<div class="discover-content followers-wrapper  grid-container u-padding-top-10 u-padding-bottom-70
 		{% if currentPath !== 'followers' %} hide {% endif %}">
 		<div class="grid-100 grid-parent">
+
+			<div class="empty-box">
+				<div class="empty-box-column left">
+					<div class="plus-container">
+						<i class="bi_interface-minimize"></i>
+					</div>
+				</div>
+				<div class="empty-box-column right">
+
+					<i class="bi_interface-minimize"></i>
+
+					<p class="title u-margin-top-20">Compartir es amar</p>
+					<p class="subtitle u-margin-top-20">Comparte tu portafolio para <br> dar a conocer tu talento al mundo</p>
+
+					<a href="#" class="subtitle u-margin-top-20">Saber más sobre cómo difundir tu portafolio</a>
+
+					<!-- <a href="#" class="u-margin-top-20"><i class="bi_media-image-d"></i>&nbsp;&nbsp;BUSCAR ARCHIVO</a> -->
+					<a href="#" class="u-margin-top-30 button"><i class="bi_web-share-b"></i>&nbsp;&nbsp;COMPARTIR PERFIL</a>
+				</div>
+			</div>
+
 			{% if owner %}
 			<p class="empty-profile-text bare-message empty-message hide u-margin-top-30">Aún no te sigue ningun artista<br><br>
 				<a href="/users/specialty/all/page-1?order=popularity">Descubre y empieza a seguir tu primer artista</a>
