add following empty box

--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -187,6 +187,27 @@
 		{% if currentPath !== 'followings' %} hide {% endif %}">
 		<div class="grid-100 grid-parent">
 
+
+			<div class="empty-box">
+				<div class="empty-box-column left">
+					<div class="plus-container">
+						<i class="bi_interface-minimize"></i>
+					</div>
+				</div>
+				<div class="empty-box-column right">
+
+					<i class="bi_interface-minimize"></i>
+
+					<p class="title u-margin-top-20">Aùn no sigues a nadie :/</p>
+					<p class="subtitle u-margin-top-20">No seas tímido, existen cientos de artistas <br> que esperan a ser descubiertos.</p>
+
+					<a href="#" class="subtitle u-margin-top-20">¿Porqúe seguir a más artistas?</a>
+
+					<!-- <a href="#" class="u-margin-top-20"><i class="bi_media-image-d"></i>&nbsp;&nbsp;BUSCAR ARCHIVO</a> -->
+					<a href="#" class="u-margin-top-30 button"><i class="bi_web-share-b"></i>&nbsp;&nbsp;COMPARTIR PERFIL</a>
+				</div>
+			</div>
+
 			{% if owner %}
 			<p class="empty-profile-text bare-message empty-message hide u-margin-top-30">Aún no sigues a ningun artista <br><br>
 				<a href="/users/specialty/all/page-1?order=popularity">Descubre y empieza a seguir tu primer artista</a>
