add empty collections

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -3011,6 +3011,7 @@ body
 		text-decoration underline
 
 	.button
+		// display block
 		text-decoration none
 		font-family 'Montserrat', sans-serif !important
 		// font-weight bold
