--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -170,6 +170,27 @@
 	<div class="discover-content collections-wrapper grid-container u-padding-top-10 u-padding-bottom-70
 		{% if currentPath !== 'collections' %} hide {% endif %}">
 		<div class="grid-100 grid-parent">
+
+			<div class="empty-box">
+				<div class="empty-box-column left">
+					<div class="plus-container">
+						<i class=" bi_doc-documents"></i>
+					</div>
+				</div>
+				<div class="empty-box-column right">
+
+					<i class=" bi_doc-documents"></i>
+
+					<p class="title u-margin-top-20">Crea tu primera colección de arte</p>
+					<p class="subtitle u-margin-top-20">Todo es válido, descubre el arte que más te guste <br> y gúardalo en tus colecciones.</p>
+
+					<a href="#" class="subtitle u-margin-top-20">Saber más sobre colecciones</a>
+
+					<!-- <a href="#" class="u-margin-top-20"><i class="bi_media-image-d"></i>&nbsp;&nbsp;BUSCAR ARCHIVO</a> -->
+					<a href="#" class="u-margin-top-30 button"><i class=" bi_doc-documents"></i>&nbsp;&nbsp;DESCUBRIR OBRAS</a>
+				</div>
+			</div>
+
 			{% if owner %}
 			<p class="empty-profile-text bare-message empty-message hide u-margin-top-30">Aún no tienes ningun colecccion <br><br>
 			</p>
