--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -99,9 +99,8 @@
 			<div class="u-separator"></div>
 		</div>
 		<div class="grid-100 grid-parent u-margin-top-60">
-
-
-			<div class="empty-box">
+			{% if owner %}
+			<div class="empty-box bare-message">
 				<div class="empty-box-column left">
 					<div class="plus-container">
 						<i class="bi_interface-circle-plus"></i>
@@ -116,30 +115,9 @@
 					<p class="subtitle u-margin-top-20">Pero anímate cualquiera puede crear! <br> Sube un dibujo o una foto y comienza tu aventura!</p>
 
 					<a href="#" class="subtitle u-margin-top-20">Saber mas sobre subir obras</a>
-
-					<!-- <a href="#" class="u-margin-top-20"><i class="bi_media-image-d"></i>&nbsp;&nbsp;BUSCAR ARCHIVO</a> -->
 					<a href="#" class="u-margin-top-30 button"><i class="bi_interface-circle-plus"></i>&nbsp;&nbsp;SUBIR PRIMERA OBRA</a>
 				</div>
 			</div>
-
-			{% if owner %}
-			<div class="empty-box bare-message hide">
-				<div class="empty-box-column left">
-					<div class="plus-container">
-						<i class="bi_interface-circle-plus"></i>
-					</div>
-				</div>
-				<div class="empty-box-column right">
-
-					<i class="bi_interface-circle-plus"></i>
-
-					<p class="title u-margin-top-20">No tienes ninguna obra o creación <br> subida todavía :(</p>
-					<p class="subtitle u-margin-top-20">Pero anímate cualquiera puede crear! <br> Sube un dibujo o una fotografía <br> y comienza tu aventura <br> como artista!</p>
-
-					<a href="#" class="u-margin-top-20"><i class="bi_media-image-d"></i>&nbsp;&nbsp;BUSCAR ARCHIVO</a>
-				</div>
-			</div>
-
 			{% else %}
 			<p class="empty-profile-text bare-message empty-message hide u-margin-top-30">{{profile.fullname}} no ha subido ninguna obra aún<br><br></p>
 			{% endif %}
@@ -150,28 +128,11 @@
 		</div>
 	</div>
 
-	<div class="discover-content store-wrapper grid-container u-padding-top-10 u-padding-bottom-70
-		{% if currentPath !== 'store' %} hide {% endif %}">
-		<div class="grid-100 grid-parent">
-			{% if owner %}
-			<p class="empty-profile-text bare-message empty-message hide u-margin-top-30">Aún no tienes ningun producto <br><br>
-				<a href="/user/{{user.username}}/work/add">Sube tu primera obra para ponerla en venta</a>
-			</p>
-			{% else %}
-			<p class="empty-profile-text bare-message empty-message hide u-margin-top-30">{{profile.fullname}} no esta vendiendo ningun product aún<br><br></p>
-			{% endif %}
-      <div class="grid store-container work-layout-discover">
-				<div class="grid-sizer"></div>
-      </div>
-			<div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div>
-		</div>
-	</div>
-
 	<div class="discover-content collections-wrapper grid-container u-padding-top-10 u-padding-bottom-70
 		{% if currentPath !== 'collections' %} hide {% endif %}">
 		<div class="grid-100 grid-parent">
-
-			<div class="empty-box">
+			{% if owner %}
+			<div class="empty-box bare-message">
 				<div class="empty-box-column left">
 					<div class="plus-container">
 						<i class=" bi_doc-documents"></i>
@@ -185,15 +146,9 @@
 					<p class="subtitle u-margin-top-20">Todo es válido, descubre el arte que más te guste <br> y gúardalo en tus colecciones.</p>
 
 					<a href="#" class="subtitle u-margin-top-20">Saber más sobre colecciones</a>
-
-					<!-- <a href="#" class="u-margin-top-20"><i class="bi_media-image-d"></i>&nbsp;&nbsp;BUSCAR ARCHIVO</a> -->
 					<a href="#" class="u-margin-top-30 button"><i class=" bi_doc-documents"></i>&nbsp;&nbsp;DESCUBRIR OBRAS</a>
 				</div>
 			</div>
-
-			{% if owner %}
-			<p class="empty-profile-text bare-message empty-message hide u-margin-top-30">Aún no tienes ningun colecccion <br><br>
-			</p>
 			{% else %}
 			<p class="empty-profile-text bare-message empty-message hide u-margin-top-30">{{profile.fullname}} no tiene ninguna coleccion<br><br></p>
 			{% endif %}
@@ -207,9 +162,8 @@
 	<div class="discover-content followings-wrapper  grid-container u-padding-top-10 u-padding-bottom-70
 		{% if currentPath !== 'followings' %} hide {% endif %}">
 		<div class="grid-100 grid-parent">
-
-
-			<div class="empty-box">
+			{% if owner %}
+			<div class="empty-box bare-message">
 				<div class="empty-box-column left">
 					<div class="plus-container">
 						<i class="bi_interface-minimize"></i>
@@ -223,16 +177,9 @@
 					<p class="subtitle u-margin-top-20">No seas tímido, existen cientos de artistas <br> que esperan a ser descubiertos.</p>
 
 					<a href="#" class="subtitle u-margin-top-20">¿Porqúe seguir a más artistas?</a>
-
-					<!-- <a href="#" class="u-margin-top-20"><i class="bi_media-image-d"></i>&nbsp;&nbsp;BUSCAR ARCHIVO</a> -->
 					<a href="#" class="u-margin-top-30 button"><i class="bi_web-share-b"></i>&nbsp;&nbsp;COMPARTIR PERFIL</a>
 				</div>
 			</div>
-
-			{% if owner %}
-			<p class="empty-profile-text bare-message empty-message hide u-margin-top-30">Aún no sigues a ningun artista <br><br>
-				<a href="/users/specialty/all/page-1?order=popularity">Descubre y empieza a seguir tu primer artista</a>
-			</p>
 			{% else %}
 			<p class="empty-profile-text bare-message empty-message hide u-margin-top-30">{{profile.fullname}} no sigue a nadie<br><br></p>
 			{% endif %}
@@ -246,8 +193,8 @@
 	<div class="discover-content followers-wrapper  grid-container u-padding-top-10 u-padding-bottom-70
 		{% if currentPath !== 'followers' %} hide {% endif %}">
 		<div class="grid-100 grid-parent">
-
-			<div class="empty-box">
+			{% if owner %}
+			<div class="empty-box bare-message">
 				<div class="empty-box-column left">
 					<div class="plus-container">
 						<i class="bi_interface-minimize"></i>
@@ -261,16 +208,9 @@
 					<p class="subtitle u-margin-top-20">Comparte tu portafolio para <br> dar a conocer tu talento al mundo</p>
 
 					<a href="#" class="subtitle u-margin-top-20">Saber más sobre cómo difundir tu portafolio</a>
-
-					<!-- <a href="#" class="u-margin-top-20"><i class="bi_media-image-d"></i>&nbsp;&nbsp;BUSCAR ARCHIVO</a> -->
 					<a href="#" class="u-margin-top-30 button"><i class="bi_web-share-b"></i>&nbsp;&nbsp;COMPARTIR PERFIL</a>
 				</div>
 			</div>
-
-			{% if owner %}
-			<p class="empty-profile-text bare-message empty-message hide u-margin-top-30">Aún no te sigue ningun artista<br><br>
-				<a href="/users/specialty/all/page-1?order=popularity">Descubre y empieza a seguir tu primer artista</a>
-			</p>
 			{% else %}
 			<p class="empty-profile-text bare-message empty-message hide u-margin-top-30">{{profile.fullname}} no sigue a nadie<br><br></p>
 			{% endif %}
