--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -267,8 +267,28 @@
 				</div>
 			</div>
 
+			<div class="empty-box" style="max-width: 500px;">
+				<!-- <div class="empty-box-column left">
+					<div class="plus-container">
+						<i class="bi_interface-minimize"></i>
+					</div>
+				</div> -->
+				<div class="empty-box-column right">
+
+					<i class="bi_interface-minimize"></i>
+
+					<p class="title u-margin-top-20">Este usuario aún no tiene seguidores</p>
+					<p class="subtitle u-margin-top-20">Pero tu puedes ser el primero en seguirlo. <br> Quien sabe quizas es el comienzo de algo grande.</p>
+
+					<a href="#" class="subtitle u-margin-top-20">Saber más sobre cómo difundir tu portafolio</a>
+
+					<!-- <a href="#" class="u-margin-top-20"><i class="bi_media-image-d"></i>&nbsp;&nbsp;BUSCAR ARCHIVO</a> -->
+					<a href="#" class="u-margin-top-30 button"><i class="bi_web-share-b"></i>&nbsp;&nbsp;COMPARTIR PERFIL</a>
+				</div>
+			</div>
+
 			{% if owner %}
-			<p class="empty-profile-text bare-message empty-message hide u-margin-top-30">Aún no te sigue ningun artista<br><br>
+			<p class="empty-profile-text bare-message empty-message hide u-margin-top-30">Este usuario aún no tiene seguidores<br><br>
 				<a href="/users/specialty/all/page-1?order=popularity">Descubre y empieza a seguir tu primer artista</a>
 			</p>
 			{% else %}
