new empty messages

--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -153,6 +153,7 @@
 	<div class="discover-content store-wrapper grid-container u-padding-top-10 u-padding-bottom-70
 		{% if currentPath !== 'store' %} hide {% endif %}">
 		<div class="grid-100 grid-parent">
+
 			{% if owner %}
 			<p class="empty-profile-text bare-message empty-message hide u-margin-top-30">Aún no tienes ningun producto <br><br>
 				<a href="/user/{{user.username}}/work/add">Sube tu primera obra para ponerla en venta</a>
@@ -183,6 +184,21 @@
 
 					<p class="title u-margin-top-20">Crea tu primera colección de arte</p>
 					<p class="subtitle u-margin-top-20">Todo es válido, descubre el arte que más te guste <br> y gúardalo en tus colecciones.</p>
+
+					<a href="#" class="subtitle u-margin-top-20">Saber más sobre colecciones</a>
+
+					<!-- <a href="#" class="u-margin-top-20"><i class="bi_media-image-d"></i>&nbsp;&nbsp;BUSCAR ARCHIVO</a> -->
+					<a href="#" class="u-margin-top-30 button"><i class=" bi_doc-documents"></i>&nbsp;&nbsp;DESCUBRIR OBRAS</a>
+				</div>
+			</div>
+
+			<div class="empty-box" style="max-width: 500px;">
+				<div class="empty-box-column right">
+
+					<i class=" bi_doc-documents"></i>
+
+					<p class="title u-margin-top-20">No existen colecciones aquí (todavía)</p>
+					<p class="subtitle u-margin-top-20">Coleccionar es divertido y gratis! <br> Tu también puedes hacerlo.</p>
 
 					<a href="#" class="subtitle u-margin-top-20">Saber más sobre colecciones</a>
 
@@ -226,6 +242,21 @@
 
 					<!-- <a href="#" class="u-margin-top-20"><i class="bi_media-image-d"></i>&nbsp;&nbsp;BUSCAR ARCHIVO</a> -->
 					<a href="#" class="u-margin-top-30 button"><i class="bi_web-share-b"></i>&nbsp;&nbsp;COMPARTIR PERFIL</a>
+				</div>
+			</div>
+
+			<div class="empty-box" style="max-width: 500px;">
+				<div class="empty-box-column right">
+
+					<i class="bi_interface-minimize"></i>
+
+					<p class="title u-margin-top-20">Algunos somos lobos esteparios</p>
+					<p class="subtitle u-margin-top-20">No tiene nada de malo, <br> pero es más divertido seguir a us artistas favoritos.</p>
+
+					<a href="#" class="subtitle u-margin-top-20">¿Porqúe seguir a más artistas?</a>
+
+					<!-- <a href="#" class="u-margin-top-20"><i class="bi_media-image-d"></i>&nbsp;&nbsp;BUSCAR ARCHIVO</a> -->
+					<a href="#" class="u-margin-top-30 button"><i class="bi_web-share-b"></i>&nbsp;&nbsp;DESCUBRIR ARTISTAS</a>
 				</div>
 			</div>
 
