add empty box in portfolio

--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -122,6 +122,22 @@
 				</div>
 			</div>
 
+			<div class="empty-box" style="max-width: 500px;">
+				<div class="empty-box-column right">
+
+					<i class="bi_interface-circle-plus"></i>
+					<!-- <i class="bi_interface-plus"></i> -->
+
+					<p class="title u-margin-top-20">No se han subido obras todavía</p>
+					<p class="subtitle u-margin-top-20">Pero el proceso creativo puede suceder <br> en cualquier momento y en cualquier lugar <br><br> Esperemos que pronto</p>
+
+					<a href="#" class="subtitle u-margin-top-20">Saber mas sobre subir obras</a>
+
+					<!-- <a href="#" class="u-margin-top-20"><i class="bi_media-image-d"></i>&nbsp;&nbsp;BUSCAR ARCHIVO</a> -->
+					<!-- <a href="#" class="u-margin-top-30 button"><i class="bi_interface-circle-plus"></i>&nbsp;&nbsp;SUBIR PRIMERA OBRA</a> -->
+				</div>
+			</div>
+
 			{% if owner %}
 			<div class="empty-box bare-message hide">
 				<div class="empty-box-column left">
