--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -3036,3 +3036,11 @@ body
 			font-size 2.5em
 			// color #000
 			color white
+
+
+.private-view
+	background #ddd
+	padding 80px 20px
+	.empty-box
+		background white
+		border none
