--- a/app/views/errors/401.html
+++ b/app/views/errors/401.html
@@ -2,9 +2,24 @@
 
 {% block elements %}
 
-	<div class="private">
+	<div class="private-view">
+		<div class="empty-box">
+			<div class="empty-box-column left">
+				<div class="plus-container">
+					<i class="bi_user-lock"></i>
+				</div>
+			</div>
+			<div class="empty-box-column right">
 
+				<i class="bi_user-lock"></i>
+
+				<p class="title u-margin-top-20">Lo sentimos no puedes ver esta obra :( pues está en modo privado</p>
+				<p class="subtitle u-margin-top-20">Pero existen 5000 obras que son públicas esperando a ser descubiertas por tí</p>
+
+				<a href="#" class="u-margin-top-30 button"><i class="bi_interface-circle-plus"></i>&nbsp;&nbsp;DESCRUBRIR OBRAS</a>
+
+			</div>
+		</div>
 	</div>
-
 
 {% endblock %}
