--- a/app/views/partials/elements/work.html
+++ b/app/views/partials/elements/work.html
@@ -12,8 +12,10 @@
         <% } %>
       <% } %>
 
+
       <% if (viewer && viewer.isAdmin) { %>
-        <div class="delete"><i class="bi_editorial-trash-a-l"></i></div>
+        {# <div class="delete"><i class="bi_editorial-trash-a-l"></i></div> #}
+
         <div class="confirm delete-confirm hide">
           <% if (context && context === 'single-collection') { %>
             <span>borrar de coleccion?</span>
@@ -26,27 +28,42 @@
       <% } %>
 
       <% if (owner) { %>
-        <div class="edit"><i class="bi_editorial-compose"></i></div>
-      <% } %>
+        {# <div class="edit"><i class="bi_editorial-compose"></i></div> #}
 
-      <div class="private">PRIVADO</div>
-
-      <div class="cover-work">
-        <div class="inner">
-          <p class="title">¿ELIMINAR ESTA OBRA?</p>
-          <div class="options">
-            <div class="option">
-              <i class="color bi_editorial-trash-l"></i>
-              <p>ELIMINAR</p>
-            </div>
-            <div class="option">
-              <i class="bi_interface-forward"></i>
-              <p>VOLVER</p>
+        <div class="cover-work work-options">
+          <div class="inner">
+            <div class="options">
+              <div class="option edit">
+                <i class="bi_editorial-compose"></i>
+                <p>EDITAR</p>
+              </div>
+              <div class="option delete">
+                <i class="bi_editorial-trash-l"></i>
+                <p>ELIMINAR</p>
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
+        <div class="cover-work confirm delete-confirm hide">
+          <div class="inner">
+            <p class="title">¿ELIMINAR ESTA OBRA?</p>
+            <div class="options">
+              <div class="option delete-force">
+                <i class="color bi_editorial-trash-l"></i>
+                <p>ELIMINAR</p>
+              </div>
+              <div class="option cancel">
+                <i class="bi_interface-forward"></i>
+                <p>VOLVER</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      <% } %>
+
+      <div class="private">PRIVADO</div>
 
       <a href="/user/<%=User.username%>/work/<%=nameSlugify%>">
         <img src="<%= addFilter(photo, 'w_300,d_am_avatar.jpg') %>">
@@ -54,3 +71,19 @@
     </div>
   </div>
 </script>
+
+        <!-- <div class="cover-work">
+          <div class="inner">
+            <p class="title">¿ELIMINAR ESTA OBRA?</p>
+            <div class="options">
+              <div class="option">
+                <i class="color bi_editorial-trash-l"></i>
+                <p>ELIMINAR</p>
+              </div>
+              <div class="option">
+                <i class="bi_interface-forward"></i>
+                <p>VOLVER</p>
+              </div>
+            </div>
+          </div>
+        </div> -->
