--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -73,7 +73,7 @@
 						<div class="body u-text-center">
 							<div class="ask-requester {% if element.requested %} hide {% endif %}">
 								<p class="title large">Puedes preguntar al artista la disponibilidad</p>
-									<button class="am-View-button expand u-margin-top-20 ask-available">PREGUNTAR DISPONIBILIDAD</button>
+									<button class="am-View-button expand u-margin-top-20 ask-availability">PREGUNTAR DISPONIBILIDAD</button>
 									<p class="msg u-padding-top-15 u-padding-bottom-4">Muy pronto la tienda en línea</p>
 							</div>
 							<div class="thanks-requester {% if !element.requested %} hide {% endif %}">
