--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -93,53 +93,22 @@
 		<div class="grid-100">
 			<p class="profile-title u-margin-top-30">
 				<span>Mis últimos trabajos</span>
-				<!-- <span class="profile-title-edit"><i class="fa fa-pencil-square-o"></i></span>
-				<span class="profile-title-cancel"><i class="fa fa-ban"></i></span> -->
 			</p>
 			<div class="u-separator"></div>
 		</div>
 		<div class="grid-100 grid-parent u-margin-top-60">
 
-
-			<div class="empty-box">
-				<div class="empty-box-column left">
-					<div class="plus-container">
-						<i class="bi_interface-circle-plus"></i>
-					</div>
-				</div>
+			<!-- <div class="empty-box" style="max-width: 500px;">
 				<div class="empty-box-column right">
-
 					<i class="bi_interface-circle-plus"></i>
-					<!-- <i class="bi_interface-plus"></i> -->
-
-					<p class="title u-margin-top-20">No tienes ninguna obra o creación <br> subida todavía :(</p>
-					<p class="subtitle u-margin-top-20">Pero anímate cualquiera puede crear! <br> Sube un dibujo o una foto y comienza tu aventura!</p>
-
-					<a href="#" class="subtitle u-margin-top-20">Saber mas sobre subir obras</a>
-
-					<!-- <a href="#" class="u-margin-top-20"><i class="bi_media-image-d"></i>&nbsp;&nbsp;BUSCAR ARCHIVO</a> -->
-					<a href="#" class="u-margin-top-30 button"><i class="bi_interface-circle-plus"></i>&nbsp;&nbsp;SUBIR PRIMERA OBRA</a>
-				</div>
-			</div>
-
-			<div class="empty-box" style="max-width: 500px;">
-				<div class="empty-box-column right">
-
-					<i class="bi_interface-circle-plus"></i>
-					<!-- <i class="bi_interface-plus"></i> -->
-
 					<p class="title u-margin-top-20">No se han subido obras todavía</p>
 					<p class="subtitle u-margin-top-20">Pero el proceso creativo puede suceder <br> en cualquier momento y en cualquier lugar <br><br> Esperemos que pronto</p>
-
 					<a href="#" class="subtitle u-margin-top-20">Saber mas sobre subir obras</a>
-
-					<!-- <a href="#" class="u-margin-top-20"><i class="bi_media-image-d"></i>&nbsp;&nbsp;BUSCAR ARCHIVO</a> -->
-					<!-- <a href="#" class="u-margin-top-30 button"><i class="bi_interface-circle-plus"></i>&nbsp;&nbsp;SUBIR PRIMERA OBRA</a> -->
 				</div>
-			</div>
+			</div> -->
 
 			{% if owner %}
-			<div class="empty-box bare-message hide">
+			<!-- <div class="empty-box bare-message hide">
 				<div class="empty-box-column left">
 					<div class="plus-container">
 						<i class="bi_interface-circle-plus"></i>
@@ -154,10 +123,33 @@
 
 					<a href="#" class="u-margin-top-20"><i class="bi_media-image-d"></i>&nbsp;&nbsp;BUSCAR ARCHIVO</a>
 				</div>
+			</div> -->
+			<div class="empty-box bare-message hide">
+				<div class="empty-box-column left">
+					<div class="plus-container">
+						<i class="bi_interface-circle-plus"></i>
+					</div>
+				</div>
+				<div class="empty-box-column right">
+					<i class="bi_interface-circle-plus"></i>
+					<p class="title u-margin-top-20">No tienes ninguna obra o creación <br> subida todavía :(</p>
+					<p class="subtitle u-margin-top-20">Pero anímate cualquiera puede crear! <br> Sube un dibujo o una foto y comienza tu aventura!</p>
+					<a href="#" class="subtitle u-margin-top-20">Saber mas sobre subir obras</a>
+					<a href="#" class="u-margin-top-30 button"><i class="bi_interface-circle-plus"></i>&nbsp;&nbsp;SUBIR PRIMERA OBRA</a>
+				</div>
 			</div>
 
 			{% else %}
-			<p class="empty-profile-text bare-message empty-message hide u-margin-top-30">{{profile.fullname}} no ha subido ninguna obra aún<br><br></p>
+				<!-- <p class="empty-profile-text bare-message empty-message hide u-margin-top-30">{{profile.fullname}} no ha subido ninguna obra aún<br><br></p> -->
+				<div class="empty-box bare-message hide" style="max-width: 500px;">
+					<div class="empty-box-column right">
+						<i class="bi_interface-circle-plus"></i>
+						<p class="title u-margin-top-20">No se han subido obras todavía</p>
+						<p class="subtitle u-margin-top-20">Pero el proceso creativo puede suceder <br> en cualquier momento y en cualquier lugar <br><br> Esperemos que pronto</p>
+						<a href="#" class="subtitle u-margin-top-20">Saber mas sobre subir obras</a>
+					</div>
+				</div>
+
 			{% endif %}
       <div class="grid portfolio-container work-layout-discover">
 				<div class="grid-sizer"></div>
@@ -188,46 +180,35 @@
 		{% if currentPath !== 'collections' %} hide {% endif %}">
 		<div class="grid-100 grid-parent">
 
-			<div class="empty-box">
-				<div class="empty-box-column left">
-					<div class="plus-container">
+			{% if owner %}
+				<!-- <p class="empty-profile-text bare-message empty-message hide u-margin-top-30">Aún no tienes ningun colecccion <br><br> -->
+				<div class="empty-box bare-message hide">
+					<div class="empty-box-column left">
+						<div class="plus-container">
+							<i class=" bi_doc-documents"></i>
+						</div>
+					</div>
+					<div class="empty-box-column right">
 						<i class=" bi_doc-documents"></i>
+						<p class="title u-margin-top-20">Crea tu primera colección de arte</p>
+						<p class="subtitle u-margin-top-20">Todo es válido, descubre el arte que más te guste <br> y gúardalo en tus colecciones.</p>
+						<a href="#" class="subtitle u-margin-top-20">Saber más sobre colecciones</a>
+						<a href="#" class="u-margin-top-30 button"><i class=" bi_doc-documents"></i>&nbsp;&nbsp;DESCUBRIR OBRAS</a>
 					</div>
 				</div>
-				<div class="empty-box-column right">
-
-					<i class=" bi_doc-documents"></i>
-
-					<p class="title u-margin-top-20">Crea tu primera colección de arte</p>
-					<p class="subtitle u-margin-top-20">Todo es válido, descubre el arte que más te guste <br> y gúardalo en tus colecciones.</p>
-
-					<a href="#" class="subtitle u-margin-top-20">Saber más sobre colecciones</a>
-
-					<!-- <a href="#" class="u-margin-top-20"><i class="bi_media-image-d"></i>&nbsp;&nbsp;BUSCAR ARCHIVO</a> -->
-					<a href="#" class="u-margin-top-30 button"><i class=" bi_doc-documents"></i>&nbsp;&nbsp;DESCUBRIR OBRAS</a>
-				</div>
-			</div>
-
-			<div class="empty-box" style="max-width: 500px;">
-				<div class="empty-box-column right">
-
-					<i class=" bi_doc-documents"></i>
-
-					<p class="title u-margin-top-20">No existen colecciones aquí (todavía)</p>
-					<p class="subtitle u-margin-top-20">Coleccionar es divertido y gratis! <br> Tu también puedes hacerlo.</p>
-
-					<a href="#" class="subtitle u-margin-top-20">Saber más sobre colecciones</a>
-
-					<!-- <a href="#" class="u-margin-top-20"><i class="bi_media-image-d"></i>&nbsp;&nbsp;BUSCAR ARCHIVO</a> -->
-					<a href="#" class="u-margin-top-30 button"><i class=" bi_doc-documents"></i>&nbsp;&nbsp;DESCUBRIR OBRAS</a>
-				</div>
-			</div>
-
-			{% if owner %}
-			<p class="empty-profile-text bare-message empty-message hide u-margin-top-30">Aún no tienes ningun colecccion <br><br>
 			</p>
 			{% else %}
-			<p class="empty-profile-text bare-message empty-message hide u-margin-top-30">{{profile.fullname}} no tiene ninguna coleccion<br><br></p>
+				<!-- <p class="empty-profile-text bare-message empty-message hide u-margin-top-30">{{profile.fullname}} no tiene ninguna coleccion<br><br></p> -->
+				<div class="empty-box bare-message hide" style="max-width: 500px;">
+					<div class="empty-box-column right">
+						<i class=" bi_doc-documents"></i>
+						<p class="title u-margin-top-20">No existen colecciones aquí (todavía)</p>
+						<p class="subtitle u-margin-top-20">Coleccionar es divertido y gratis! <br> Tu también puedes hacerlo.</p>
+						<a href="#" class="subtitle u-margin-top-20">Saber más sobre colecciones</a>
+						<a href="#" class="u-margin-top-30 button"><i class=" bi_doc-documents"></i>&nbsp;&nbsp;DESCUBRIR OBRAS</a>
+					</div>
+				</div>
+
 			{% endif %}
       <div class="grid collections-container work-layout-discover">
 				<div class="grid-sizer"></div>
@@ -241,25 +222,6 @@
 		<div class="grid-100 grid-parent">
 
 
-			<div class="empty-box">
-				<div class="empty-box-column left">
-					<div class="plus-container">
-						<i class="bi_interface-minimize"></i>
-					</div>
-				</div>
-				<div class="empty-box-column right">
-
-					<i class="bi_interface-minimize"></i>
-
-					<p class="title u-margin-top-20">Aùn no sigues a nadie :/</p>
-					<p class="subtitle u-margin-top-20">No seas tímido, existen cientos de artistas <br> que esperan a ser descubiertos.</p>
-
-					<a href="#" class="subtitle u-margin-top-20">¿Porqúe seguir a más artistas?</a>
-
-					<!-- <a href="#" class="u-margin-top-20"><i class="bi_media-image-d"></i>&nbsp;&nbsp;BUSCAR ARCHIVO</a> -->
-					<a href="#" class="u-margin-top-30 button"><i class="bi_web-share-b"></i>&nbsp;&nbsp;COMPARTIR PERFIL</a>
-				</div>
-			</div>
 
 			<div class="empty-box" style="max-width: 500px;">
 				<div class="empty-box-column right">
@@ -277,9 +239,24 @@
 			</div>
 
 			{% if owner %}
-			<p class="empty-profile-text bare-message empty-message hide u-margin-top-30">Aún no sigues a ningun artista <br><br>
-				<a href="/users/specialty/all/page-1?order=popularity">Descubre y empieza a seguir tu primer artista</a>
-			</p>
+				<!-- <p class="empty-profile-text bare-message empty-message hide u-margin-top-30">Aún no sigues a ningun artista <br><br>
+					<a href="/users/specialty/all/page-1?order=popularity">Descubre y empieza a seguir tu primer artista</a>
+				</p> -->
+
+				<div class="empty-box bare-message hide">
+					<div class="empty-box-column left">
+						<div class="plus-container">
+							<i class="bi_interface-minimize"></i>
+						</div>
+					</div>
+					<div class="empty-box-column right">
+						<i class="bi_interface-minimize"></i>
+						<p class="title u-margin-top-20">Aùn no sigues a nadie :/</p>
+						<p class="subtitle u-margin-top-20">No seas tímido, existen cientos de artistas <br> que esperan a ser descubiertos.</p>
+						<a href="#" class="subtitle u-margin-top-20">¿Porqúe seguir a más artistas?</a>
+						<a href="#" class="u-margin-top-30 button"><i class="bi_web-share-b"></i>&nbsp;&nbsp;COMPARTIR PERFIL</a>
+					</div>
+				</div>
 			{% else %}
 			<p class="empty-profile-text bare-message empty-message hide u-margin-top-30">{{profile.fullname}} no sigue a nadie<br><br></p>
 			{% endif %}
