add arrparrow in social actions

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2478,6 +2478,12 @@ body
 	// transform translate(-50%, 0)
 	background white
 	min-width 250px
+	position relative
+	.arrow
+		top: -12px;
+		left: 78px;
+		position: absolute;
+		color: #c2c2c2;
 	.button
 		display inline-block
 	.button
