--- a/app/views/partials/elements/work.html
+++ b/app/views/partials/elements/work.html
@@ -30,7 +30,7 @@
       <% if (owner) { %>
         {# <div class="edit"><i class="bi_editorial-compose"></i></div> #}
 
-        <div class="cover-work work-options">
+        {# <div class="cover-work work-options">
           <div class="inner">
             <div class="options">
               <div class="option edit">
@@ -43,7 +43,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> #}
 
         <div class="cover-work confirm delete-confirm hide">
           <div class="inner">
